package com.salfit.repository;

public class CzlonekRepository {
}
