package com.salfit.repository;

public class GrafikRepository {
}
