package com.salfit.repository;

public interface Repository<T> {
}
