package com.salfit.repository;

public class SalaRepository {
}
