package com.salfit.repository;

public class TrenerRepository {
}
